app/javascript/flavours/glitch/styles/components.scss
/* ... */
.status__content__read-more-button,
.status__content__translate-button {
  display: flex;
  align-items: center;
  font-size: 15px;
  line-height: 22px;
  color: $highlight-text-color;
  border: 0;
  background: transparent;
  padding: 0;
  padding-top: 16px;
  text-decoration: none;

  &:hover,
  &:active {
    text-decoration: underline;
  }

  .icon {
    width: 15px;
    height: 15px;
  }
}

.translate-button {
  margin-top: 16px;
  font-size: 15px;
  line-height: 20px;
  display: flex;
  justify-content: space-between;
  color: $dark-text-color;
}

.status__content__spoiler-link {
  display: inline-flex; // glitch: media icon in spoiler button
  border-radius: 2px;
  background: transparent;
  border: 0;
  color: $inverted-text-color;
  font-weight: 700;
  font-size: 11px;
  padding: 0 6px;
  text-transform: uppercase;
  line-height: 20px;
  cursor: pointer;
  vertical-align: top;
  align-items: center; // glitch: content indicator

  &:hover {
    background: lighten($ui-base-color, 33%);
    text-decoration: none;
  }

  .status__content__spoiler-icon {
    display: inline-block;
    margin-inline-start: 5px;
    border-inline-start: 1px solid currentColor;
    padding: 0;
    padding-inline-start: 4px;
    width: 16px;
    height: 16px;
  }
}

.status__wrapper--filtered {
  color: $dark-text-color;
  border: 0;
  font-size: inherit;
  text-align: center;
  line-height: inherit;
  margin: 0;
  padding: 15px;
  box-sizing: border-box;
  width: 100%;
  clear: both;
  border-bottom: 1px solid var(--background-border-color);

  &__button {
    display: inline;
    color: lighten($ui-highlight-color, 8%);
    border: 0;
    background: transparent;
    padding: 0;
    font-size: inherit;
    line-height: inherit;

    &:hover,
    &:active {
      text-decoration: underline;
    }
  }
}

.focusable {
  &:focus {
    outline: 0;
    background: rgba($ui-highlight-color, 0.05);
  }
}

.status {
  padding: 10px 14px; // glitch: reduced padding
  min-height: 54px;
  border-bottom: 1px solid var(--background-border-color);
  cursor: auto;

  @keyframes fade {
    0% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }

  opacity: 1;
  animation: fade 150ms linear;

  .media-gallery,
  .video-player,
  .audio-player,
  .attachment-list {
    margin-top: 8px; // glitch: reduced margins
  }

  &.light {
    .status__relative-time,
    .status__visibility-icon {
      color: $light-text-color;
    }

    .status__display-name {
      color: $inverted-text-color;
    }

    .display-name {
      color: $light-text-color;

      strong {
        color: $inverted-text-color;
      }
    }

    .status__content {
      color: $inverted-text-color;

      a {
        color: $highlight-text-color;
      }

      &__spoiler-link {
        color: $primary-text-color;
        background: $ui-primary-color;

        &:hover,
        &:focus {
          background: lighten($ui-primary-color, 8%);
        }
      }
    }
  }

  &--in-thread {
    $thread-margin: 46px + 10px;

    border-bottom: 0;

    .status__content,
    .status__action-bar {
      margin-inline-start: $thread-margin;
      width: calc(100% - $thread-margin);
    }

    .status__content__read-more-button {
      margin-inline-start: $thread-margin;
    }
  }

  &--first-in-thread {
    border-top: 1px solid lighten($ui-base-color, 8%);
  }

  &__line {
    height: 10px - 4px;
    border-inline-start: 2px solid lighten($ui-base-color, 8%);
    width: 0;
    position: absolute;
    top: 0;
    inset-inline-start: 14px + ((46px - 2px) * 0.5);

    &--full {
      top: 0;
      height: 100%;

      &::before {
        content: '';
        display: block;
        position: absolute;
        top: 10px - 4px;
        height: 46px + 4px + 4px;
        width: 2px;
        background: $ui-base-color;
        inset-inline-start: -2px;
      }
    }

    &--first {
      top: 10px + 46px + 4px;
      height: calc(100% - (10px + 46px + 4px));

      &::before {
        display: none;
      }
    }
  }

  &.collapsed {
    background-position: center;
    background-size: cover;
    user-select: none;
    min-height: 0;

    &.has-background::before {
      display: block;
      position: absolute;
      inset-inline-start: 0;
      inset-inline-end: 0;
      top: 0;
      bottom: 0;
      background-image: linear-gradient(
        to bottom,
        rgba($base-shadow-color, 0.75),
        rgba($base-shadow-color, 0.65) 24px,
        rgba($base-shadow-color, 0.8)
      );
      pointer-events: none;
      content: '';
    }

    .display-name:hover .display-name__html {
      text-decoration: none;
    }

    .status__content {
      height: 20px;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-top: 0;

      &::after {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        inset-inline-start: 0;
        inset-inline-end: 0;
        background: linear-gradient(transparent, var(--background-color));
        pointer-events: none;
      }

      a:hover {
        text-decoration: none;
      }
    }

    &:focus > .status__content::after {
      background: linear-gradient(
        rgba(lighten($ui-base-color, 4%), 0),
        rgba(lighten($ui-base-color, 4%), 1)
      );
    }

    // TODO: review
    &.status-direct > .status__content::after {
      background: linear-gradient(
        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 0),
        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 1)
      );
    }
  }
}

.status__wrapper.collapsed {
  .notification__message {
    margin-bottom: 0;
    white-space: nowrap;
  }
}

.notification__message-collapse-button {
  text-align: end;
  flex-grow: 2;

  .status__collapse-button .icon {
    width: 24px;
    height: 24px;
  }
}

.status__relative-time {
  display: block;
  font-size: 14px;
  color: $dark-text-color;
  text-align: end;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
/* ... */

